src/test/deca/context/valid/classes/class_one_field_int.deca
// Description :
//    Classe contenant un seul champ de type int.
//
// Resultats :
//    OK

class A {
    int x;
}

{
}

