src/test/deca/context/invalid/inheritance/instanceof_invalid_types_1.deca
// Description :
//    Utilisation de instanceof avec un type primitif.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

{
    int x = 3;
    boolean b = x instanceof int;
}

